--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 
 .col-4 {
-  background-color: #f8f9fa;
+  background-color: #242424;
   border: 1px solid #187fe6;
   text-align: center;
   padding: 15px;
@@ -21,4 +21,18 @@
   text-align: center;
   padding: 15px;
   overflow: hidden;
+}
+
+.altura {
+  height: 220px;
+}
+
+
+@media (max-width: 768px) {
+
+  .altura {
+    height: 150px;
+  }
+
+
 }
